working on functions, connections and index/ root
