# routes/apartments.js
@@ -1,9 +1,19 @@
-const {Router} = require("express");
-const router = Router();
-const openCors = require('../middleware/openCors');
-const {getOneApartment} = require("../controllers/apartments");
+const express = require("express");
+const router = express.Router();
+const openCors = require("../middleware/openCors");
+const {
+  getAll,
+  getOne,
+  createListing,
+  updateListing,
+  deleteListing,
+} = require("../controllers/apartments");
 
-router.use([openCors]);
-router.get("/:id", getOneApartment);
+router.use([openCors, express.json()]);
+router.get("/", getAll);
+router.get("/:id", getOne);
+router.post("/", createListing);
+router.put("/:id", updateListing);
+router.delete("/:id", deleteListing);
 
 module.exports = router;
